# redraft

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/design/: README.md
docs/protocol/: organizing-protocol.md
docs/seed/: seed-nodes.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: Logo.tsx  StatusIndicator.tsx  (+3 more)
scripts/: seed_graph.py
skills/redraft-fetch-docs/: SKILL.md
skills/redraft-init/: SKILL.md
skills/redraft-report/: SKILL.md
src/redraft/: __init__.py  cli.py  config.py  errors.py  gitops.py  graphrules.py  ids.py  index.py  init.py  locking.py  models.py  nodefile.py  organizing_protocol.md  overview.py  prompts.py  report.py  resources.py  schema.py  server.py  store.py  tool_errors.py
tests/: conftest.py  fixtures_ddl.py  test_admin_tools.py  test_cli.py  test_config.py  test_errors.py  test_fts.py  test_gitops.py  test_hybrid_search.py  test_ids.py  test_index.py  test_init.py  test_integrity.py  test_nodefile.py  test_overview.py  test_phase2_gates.py  test_phase3_gates.py  test_read_tools.py  test_report.py  test_resources.py  test_server.py  test_store.py  test_ui_admin.py  test_ui_attachments.py  test_ui_concurrency.py  test_ui_csrf.py  test_ui_dedup_hints.py  test_ui_edges.py  test_ui_errors.py  test_ui_nodes.py  test_ui_outline.py  test_ui_reports.py  test_ui_staleness.py  test_ui_static.py  test_ui_timeline.py  test_vector_index.py  test_write_tools.py
(+90 files in other folders)
