[project]
name = "redraft"
version = "0.1.0"
description = "AI-assisted project development and tracking: a typed, versioned design record for engineering projects, driven by your agent over MCP."
readme = "README.md"
authors = [
    { name = "Kaelin Graf" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["mcp", "design-record", "decision-log", "knowledge-graph", "claude-code", "project-tracking"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-frontmatter==1.3.0",
    "PyYAML>=6.0.1",
    "filelock==3.29.6",
    "pydantic>=2",
    "fastmcp==3.4.3",
    "sqlite-vec==0.1.9",
    "fastembed==0.8.0",
    "fastapi==0.139.0",
    "uvicorn==0.50.2",
    "python-multipart==0.0.32",
]

[project.urls]
Repository = "https://github.com/KaelinGraf/redraft"

[project.scripts]
redraft = "redraft.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
